[package]
name = "cwebp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace", "std"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", features = ["webp"] }
walkdir = "2"
rayon = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
